# hotel-room-detector

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  deep_sleep.c  deep_sleep.h  door_sensor.c  door_sensor.h  event_handlers.c  event_handlers.h  initialization.c  initialization.h  log_tags.c  log_tags.h  lookups.c  lookups.h  main.c  pir_sensor.c  pir_sensor.h  relay_module.c  relay_module.h  rf_receiver.c  rf_receiver.h  rf_transmitter.c  rf_transmitter.h  tcp_client.c  tcp_client.h
